--- a/css/styles.css
+++ b/css/styles.css
@@ -190,13 +190,13 @@
 }
 
 #pricing>h2 {
-    margin: 0 1.5rem 1rem;
+    margin: 0 1.5rem;
     color: #ff4c68;
     font-weight: 500;
 }
 
 #pricing>p {
-    margin-bottom: 2rem;
+    margin: 1rem 0 2rem 0;
 }
 
 .pricing-container {
